# SIHN

./: .gitignore  README.md  evaluate.py  infer.py  pyproject.toml  requirements.txt  train.py
configs/: fastmri_singlecoil.yaml  ixi_singlecoil.yaml  modl_multicoil.yaml
scripts/: train_fastmri_a100.sh  train_ixi_a100.sh  train_modl_multicoil_a100.sh
sihn/: __init__.py  config.py  lightning_module.py
sihn/data/: datamodule.py  datasets.py
sihn/models/: __init__.py  blocks.py  losses.py  operators.py  sihn.py
sihn/utils/: __init__.py  complex.py  masks.py  metrics.py  seed.py
tests/: test_config.py  test_masks.py  test_model_shapes.py
