[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sihn"
version = "0.1.0"
description = "Semantic-Injected Hierarchical Network for accelerated MRI reconstruction"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["sihn*"]
